--- a/.github/workflows/gemini_code_review.yml
+++ b/.github/workflows/gemini_code_review.yml
@@ -47,6 +47,8 @@ jobs:
           pull_request_diff: |-
             ${{ steps.get_diff.outputs.pull_request_diff }}
           pull_request_chunk_size: "3500"
+          extra_prompt: |-
+            Review the code in english!
           log_level: "DEBUG"
 #jobs:
 #  review:
