--- a/.github/workflows/gemini_code_review.yml
+++ b/.github/workflows/gemini_code_review.yml
@@ -65,6 +65,8 @@ jobs:
     steps:
 #       Previous steps remain the same...
       - uses: actions/checkout@v3
+      - name: Install dependencies
+        run: pip3 install --user -r requirements.txt
       - name: Run code review with timeout
         timeout-minutes: 10  # Add timeout
         env:
